[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{name = "Alexander Mancevice", email = "alexander.mancevice@hey.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities",
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "flatsplode"
requires-python = ">= 3.5"
readme = "README.md"

[project.optional-dependencies]
test = [
	"pytest",
  "pytest-cov",
  "pytest-flake8-v2",
]

[project.scripts]
flatsplode = "flatsplode:__main__"

[project.urls]
Home = "https://github.com/amancevice/flatsplode"


[tool.pytest.ini_options]
minversion = "6.0"
addopts    = "--flake8 --cov flatsplode --cov tests --cov-report term-missing --cov-report xml"
