[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
  { name = "Alexander Mancevice", email = "alexander.mancevice@hey.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dynamic = ["version", "description"]
license = { file = "LICENSE" }
name = "flatsplode"
requires-python = ">= 3.7"
readme = "README.md"

[project.scripts]
flatsplode = "flatsplode:__main__.main"

[project.urls]
Home = "https://github.com/amancevice/flatsplode"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov flatsplode --cov tests --cov-report term-missing --cov-report xml"
